added french branch for it

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,5 +34,9 @@
 
 
 
-  }
+  },
+   "projects": {
+    "title": "Projects details  least techincal possible",
+    "subtitle": "Here is a list of my projects"
+   }
 }
