added little translation before attacking the cv part

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -35,8 +35,7 @@
     
   }, 
    "projects": {
-    "title": "Projects decris de façon moins  technique",
-    "subtitle": "Here is a list of my projects"
+    "title": "Description de mes projets"
    }
 
 }
